--- a/.github/workflows/officialpw.yml
+++ b/.github/workflows/officialpw.yml
@@ -92,14 +92,13 @@ jobs:
           pushd openwrt-qBittorrent
           rm -rf qBittorrent-static
           popd
-          git clone https://github.com/xiaorouji/openwrt-passwall luci-app-passwall
+          git clone -b fix --single-branch https://github.com/nftbty/openwrt-passwall luci-app-passwall
           git clone https://github.com/xiaorouji/openwrt-passwall-packages
           pushd luci-app-passwall/luci-app-passwall/root/etc
           rm -rf hotplug.d
 
       - name: 载入自定义配置
         run: |
-          sed -i '92,104d' package/openwrt-packages/luci-app-passwall/luci-app-passwall/root/usr/share/passwall/0_default_config
           sed -i 's/+chinadns-ng +dns2socks/+dns2socks/g' package/openwrt-packages/luci-app-passwall/luci-app-passwall/Makefile
           rm -f ./.config*
           touch ./.config
