--- a/.github/workflows/officialpw.yml
+++ b/.github/workflows/officialpw.yml
@@ -166,6 +166,7 @@ jobs:
 
           # 常用软件包:
           CONFIG_PACKAGE_smartdns=y
+          CONFIG_PACKAGE_unzip=y
           CONFIG_PACKAGE_bind-dig=y
           CONFIG_PACKAGE_ca-certificates=y
           CONFIG_PACKAGE_luci-compat=y
