--- a/.github/workflows/officialpw.yml
+++ b/.github/workflows/officialpw.yml
@@ -165,6 +165,7 @@ jobs:
           CONFIG_PACKAGE_luci-app-ttyd=y
 
           # 常用软件包:
+          CONFIG_PACKAGE_AdGuardHome=y
           CONFIG_PACKAGE_smartdns=y
           CONFIG_PACKAGE_unzip=y
           CONFIG_PACKAGE_bind-dig=y
