--- a/.github/workflows/officialpw.yml
+++ b/.github/workflows/officialpw.yml
@@ -90,6 +90,11 @@ jobs:
           pushd xipk
           rm -rf AdGuardHome
           popd
+          git clone https://github.com/sbwml/openwrt-qBittorrent
+          pushd openwrt-qBittorrent
+          rm -rf luci-app-qbittorrent
+          rm -rf qBittorrent-static
+          popd
           git clone https://github.com/xiaorouji/openwrt-passwall luci-app-passwall
           git clone https://github.com/xiaorouji/openwrt-passwall-packages
           pushd luci-app-passwall/luci-app-passwall/root/etc
@@ -155,6 +160,7 @@ jobs:
           # CONFIG_PACKAGE_luci-app-passwall_INCLUDE_V2ray_Geodata is not set
           # CONFIG_PACKAGE_luci-app-passwall_INCLUDE_V2ray_Plugin is not set
           # CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Xray is not set
+          CONFIG_PACKAGE_luci-app-qbittorrent=y
           CONFIG_PACKAGE_luci-app-sqm=y
           CONFIG_PACKAGE_luci-app-ttyd=y
 
