--- a/.github/workflows/officialpw.yml
+++ b/.github/workflows/officialpw.yml
@@ -92,8 +92,8 @@ jobs:
           popd
           git clone https://github.com/sbwml/openwrt-qBittorrent
           pushd openwrt-qBittorrent
-          rm -rf luci-app-qbittorrent
           rm -rf qBittorrent-static
+          rm -rf qBittorrent
           popd
           git clone https://github.com/xiaorouji/openwrt-passwall luci-app-passwall
           git clone https://github.com/xiaorouji/openwrt-passwall-packages
@@ -161,6 +161,8 @@ jobs:
           # CONFIG_PACKAGE_luci-app-passwall_INCLUDE_V2ray_Plugin is not set
           # CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Xray is not set
           CONFIG_PACKAGE_luci-app-qbittorrent=y
+          # CONFIG_PACKAGE_luci-app-qbittorrent_static is not set
+          CONFIG_PACKAGE_luci-app-qbittorrent_dynamic=y
           CONFIG_PACKAGE_luci-app-sqm=y
           CONFIG_PACKAGE_luci-app-ttyd=y
 
