--- a/.github/workflows/officialpw.yml
+++ b/.github/workflows/officialpw.yml
@@ -71,6 +71,7 @@ jobs:
         run: |
           pushd feeds/luci/applications
           rm -rf luci-app-pbr
+          rm -rf luci-app-samba4
           rm -rf luci-app-transmission
 
       - name: 安装feeds源
@@ -127,6 +128,11 @@ jobs:
 
           # 文件系统支持:
           CONFIG_PACKAGE_block-mount=y
+          CONFIG_PACKAGE_kmod-fs-ext4=y
+          CONFIG_PACKAGE_kmod-fs-vfat=y
+          CONFIG_PACKAGE_kmod-usb-storage=y
+          CONFIG_PACKAGE_kmod-usb-storage-extras=y
+          CONFIG_PACKAGE_kmod-usb-storage-uas=y
 
           # 去掉板载无线:
           # CONFIG_PACKAGE_brcmfmac-nvram-43455-sdio is not set
