--- a/.github/workflows/officialpw.yml
+++ b/.github/workflows/officialpw.yml
@@ -127,6 +127,7 @@ jobs:
 
           # 文件系统支持:
           CONFIG_PACKAGE_block-mount=y
+          CONFIG_PACKAGE_kmod-fs-exfat=y
           CONFIG_PACKAGE_kmod-fs-ext4=y
           CONFIG_PACKAGE_kmod-fs-vfat=y
           CONFIG_PACKAGE_kmod-usb-storage=y
@@ -183,6 +184,8 @@ jobs:
           CONFIG_PACKAGE_htop=y
           CONFIG_PACKAGE_luci=y
           CONFIG_PACKAGE_luci-theme-bootstrap=y
+          # CONFIG_PACKAGE_wpad-basic-mbedtls is not set
+          # CONFIG_PACKAGE_wpad-basic-openssl is not set
           # CONFIG_PACKAGE_wpad-basic-wolfssl is not set
           
           EOF
