--- a/.github/workflows/officialpw.yml
+++ b/.github/workflows/officialpw.yml
@@ -102,6 +102,8 @@ jobs:
 
       - name: 载入自定义配置
         run: |
+          sed -i '8s/1/0/g' package/openwrt-packages/luci-app-passwall/luci-app-passwall/Makefile
+          sed -i '12,13d' package/openwrt-packages/luci-app-passwall/luci-app-passwall/root/usr/share/passwall/0_default_config
           sed -i '92,104d' package/openwrt-packages/luci-app-passwall/luci-app-passwall/root/usr/share/passwall/0_default_config
           sed -i 's/+chinadns-ng +dns2socks/+dns2socks/g' package/openwrt-packages/luci-app-passwall/luci-app-passwall/Makefile
           rm -f ./.config*
