--- a/.github/workflows/officialpw.yml
+++ b/.github/workflows/officialpw.yml
@@ -98,6 +98,7 @@ jobs:
       - name: 载入自定义配置
         run: |
           sed -i '8s/1/0/g' package/openwrt-packages/luci-app-passwall/luci-app-passwall/root/usr/share/passwall/0_default_config
+          sed -i '9s/chinadns-ng/dnsmasq/g' package/openwrt-packages/luci-app-passwall/luci-app-passwall/root/usr/share/passwall/0_default_config
           sed -i '10s/tcp/udp/g' package/openwrt-packages/luci-app-passwall/luci-app-passwall/root/usr/share/passwall/0_default_config
           sed -i '11s/1.1.1.1/127.0.0.1:5335/g' package/openwrt-packages/luci-app-passwall/luci-app-passwall/root/usr/share/passwall/0_default_config
           sed -i '20s/proxy/disable/2' package/openwrt-packages/luci-app-passwall/luci-app-passwall/root/usr/share/passwall/0_default_config
