--- a/.github/workflows/officialpw.yml
+++ b/.github/workflows/officialpw.yml
@@ -46,7 +46,7 @@ jobs:
 
       - name: 克隆源码
         run: |
-          git clone -b openwrt-23.05 --single-branch https://github.com/openwrt/openwrt
+          git clone -b main --single-branch https://github.com/openwrt/openwrt
           mv ./openwrt/* ./
 
       - name: 更新feeds源
@@ -59,7 +59,6 @@ jobs:
           rm -rf adguardhome
           rm -rf dnsproxy
           rm -rf microsocks
-          rm -rf samba4
           rm -rf sing-box
           rm -rf smartdns
           rm -rf trojan-go
@@ -71,7 +70,6 @@ jobs:
         run: |
           pushd feeds/luci/applications
           rm -rf luci-app-pbr
-          rm -rf luci-app-samba4
           rm -rf luci-app-transmission
 
       - name: 安装feeds源
@@ -90,6 +88,8 @@ jobs:
           git clone https://github.com/symonlee/openwrt-smartdns xipk
           pushd xipk
           rm -rf AdGuardHome
+          rm -rf luci-app-samba4
+          rm -rf samba4
           popd
           git clone https://github.com/sbwml/luci-app-qbittorrent
           git clone https://github.com/xiaorouji/openwrt-passwall luci-app-passwall
@@ -162,6 +162,7 @@ jobs:
 
           # 常用LuCI插件选择:
           CONFIG_PACKAGE_luci-app-firewall=y
+          CONFIG_PACKAGE_luci-app-ksmbd=y
           CONFIG_PACKAGE_luci-app-opkg=y
           CONFIG_PACKAGE_luci-app-passwall=y
           # CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Shadowsocks_Libev_Client is not set
@@ -176,9 +177,8 @@ jobs:
           # CONFIG_PACKAGE_luci-app-passwall_INCLUDE_V2ray_Plugin is not set
           # CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Xray is not set
           CONFIG_PACKAGE_luci-app-qbittorrent=y
-          # CONFIG_PACKAGE_luci-app-qbittorrent_static is not set
-          CONFIG_PACKAGE_luci-app-qbittorrent_dynamic=y
-          CONFIG_PACKAGE_luci-app-samba4=y
+          CONFIG_PACKAGE_luci-app-qbittorrent_static=y
+          # CONFIG_PACKAGE_luci-app-qbittorrent_dynamic is not set
           CONFIG_PACKAGE_luci-app-ttyd=y
 
           # 常用软件包:
