--- a/.github/workflows/officialpw.yml
+++ b/.github/workflows/officialpw.yml
@@ -207,10 +207,18 @@ jobs:
 
       - name: 固件整理
         run: |
+          mkdir -p ./artifact/buildinfo
           rm -rf $(find ./bin/targets/ -type d -name "packages")
+          cp -rf $(find ./bin/targets/ -type f -name "*.buildinfo" -o -name "*.manifest") ./artifact/buildinfo/
+
+      - name: Upload buildinfo
+        uses: actions/upload-artifact@main
+        with:
+          name: OpenWrt_buildinfo
+          path: ./artifact/buildinfo/
 
       - name: Upload firmware
         uses: actions/upload-artifact@main
         with:
           name: OpenWrt_firmware
-          path: ./bin/targets/
+          path: ./openwrt-bcm27xx-bcm2711-rpi-4-ext4-sysupgrade.img.gz
