--- a/.github/workflows/officialpw.yml
+++ b/.github/workflows/officialpw.yml
@@ -207,10 +207,12 @@ jobs:
 
       - name: 固件整理
         run: |
+          mkdir -p ./artifact/firmware
           rm -rf $(find ./bin/targets/ -type d -name "packages")
+          cp -rf $(find ./bin/targets/ -type f -name "*.buildinfo" -o -name "*.sysupgrade.img.gz" -o -name "sha256sums") ./artifact/firmware/
 
       - name: Upload firmware
         uses: actions/upload-artifact@main
         with:
           name: OpenWrt_firmware
-          path: ./bin/targets/*.sysupgrade.img.gz,./bin/targets/sha256sums,./bin/targets/*.buildinfo
+          path: ./artifact/firmware/
