--- a/.github/workflows/officialpw.yml
+++ b/.github/workflows/officialpw.yml
@@ -46,12 +46,17 @@ jobs:
 
       - name: 克隆源码
         run: |
-          git clone -b main --single-branch https://github.com/openwrt/openwrt
+          git clone -b openwrt-23.05 --single-branch https://github.com/openwrt/openwrt
           mv ./openwrt/* ./
 
       - name: 更新feeds源
         run: |
           ./scripts/feeds update -a
+
+      - name: 升级golang版本
+        run: |
+          rm -rf feeds/packages/lang/golang
+          git clone https://github.com/sbwml/packages_lang_golang -b 22.x feeds/packages/lang/golang
 
       - name: 删除部分packages文件
         run: |
