--- a/.github/workflows/officialpw.yml
+++ b/.github/workflows/officialpw.yml
@@ -119,6 +119,13 @@ jobs:
           # 设置固件大小:
           CONFIG_TARGET_ROOTFS_PARTSIZE=300
 
+          #CURL
+          # CONFIG_LIBCURL_MBEDTLS is not set
+          # CONFIG_LIBCURL_WOLFSSL is not set
+          CONFIG_LIBCURL_OPENSSL=y
+          CONFIG_LIBCURL_NGHTTP2=y
+          CONFIG_LIBCURL_NGHTTP3=y
+
           # DNSMASQ-FULL支持:
           # CONFIG_PACKAGE_dnsmasq is not set
           CONFIG_PACKAGE_dnsmasq-full=y
