--- a/.github/workflows/officialpw.yml
+++ b/.github/workflows/officialpw.yml
@@ -112,15 +112,15 @@ jobs:
           CONFIG_TARGET_bcm27xx_bcm2711=y
           CONFIG_TARGET_bcm27xx_bcm2711_DEVICE_rpi-4=y
 
-          # 使用测试内核:
-          CONFIG_HAS_TESTING_KERNEL=y
-
           # 编译ext4固件:
           CONFIG_TARGET_ROOTFS_EXT4FS=y
           # CONFIG_TARGET_ROOTFS_SQUASHFS is not set
 
           # 设置固件大小:
           CONFIG_TARGET_ROOTFS_PARTSIZE=300
+
+          # 使用测试内核:
+          CONFIG_TESTING_KERNEL=y
 
           #CURL
           # CONFIG_LIBCURL_MBEDTLS is not set
