--- a/.github/workflows/officialpw.yml
+++ b/.github/workflows/officialpw.yml
@@ -63,7 +63,13 @@ jobs:
           pushd feeds/packages/net
           rm -rf adguardhome
           rm -rf dnsproxy
+          rm -rf microsocks
+          rm -rf sing-box
           rm -rf smartdns
+          rm -rf trojan-go
+          rm -rf v2ray-core
+          rm -rf v2ray-geodata
+          rm -rf xray-core
 
       - name: 安装feeds源
         run: |
@@ -87,7 +93,10 @@ jobs:
           rm -rf qBittorrent-static
           rm -rf qBittorrent
           popd
-          git clone https://github.com/bulianglin/homeproxy
+          git clone https://github.com/xiaorouji/openwrt-passwall luci-app-passwall
+          git clone https://github.com/xiaorouji/openwrt-passwall-packages
+          pushd luci-app-passwall/luci-app-passwall/root/etc
+          rm -rf hotplug.d
 
       - name: 载入自定义配置
         run: |
@@ -138,7 +147,19 @@ jobs:
           # 常用LuCI插件选择:
           CONFIG_PACKAGE_luci-app-firewall=y
           CONFIG_PACKAGE_luci-app-opkg=y
-          CONFIG_PACKAGE_luci-app-homeproxy=y
+          CONFIG_PACKAGE_luci-app-passwall=y
+          # CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Haproxy is not set
+          # CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Shadowsocks_Libev_Client is not set
+          # CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Shadowsocks_Libev_Server is not set
+          # CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Shadowsocks_Rust_Client is not set
+          # CONFIG_PACKAGE_luci-app-passwall_INCLUDE_ShadowsocksR_Libev_Client is not set
+          # CONFIG_PACKAGE_luci-app-passwall_INCLUDE_ShadowsocksR_Libev_Server is not set
+          # CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Simple_Obfs is not set
+          # CONFIG_PACKAGE_luci-app-passwall_INCLUDE_SingBox is not set
+          # CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Trojan_Plus is not set
+          # CONFIG_PACKAGE_luci-app-passwall_INCLUDE_V2ray_Geodata is not set
+          # CONFIG_PACKAGE_luci-app-passwall_INCLUDE_V2ray_Plugin is not set
+          CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Xray=y
           CONFIG_PACKAGE_luci-app-qbittorrent=y
           CONFIG_PACKAGE_luci-app-qbittorrent_static=y
           # CONFIG_PACKAGE_luci-app-qbittorrent_dynamic is not set
