--- a/.github/workflows/officialpw.yml
+++ b/.github/workflows/officialpw.yml
@@ -119,6 +119,13 @@ jobs:
           # 设置固件大小:
           CONFIG_TARGET_ROOTFS_PARTSIZE=300
 
+          #CURL
+          # CONFIG_LIBCURL_MBEDTLS is not set
+          # CONFIG_LIBCURL_WOLFSSL is not set
+          CONFIG_LIBCURL_OPENSSL=y
+          CONFIG_LIBCURL_NGHTTP2=y
+          CONFIG_LIBCURL_NGHTTP3=y
+
           # DNSMASQ-FULL支持:
           # CONFIG_PACKAGE_dnsmasq is not set
           CONFIG_PACKAGE_dnsmasq-full=y
@@ -152,18 +159,18 @@ jobs:
           CONFIG_PACKAGE_luci-app-ksmbd=y
           CONFIG_PACKAGE_luci-app-opkg=y
           CONFIG_PACKAGE_luci-app-passwall=y
-          # CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Haproxy is not set
+          CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Haproxy=y
           # CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Shadowsocks_Libev_Client is not set
           # CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Shadowsocks_Libev_Server is not set
           # CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Shadowsocks_Rust_Client is not set
           # CONFIG_PACKAGE_luci-app-passwall_INCLUDE_ShadowsocksR_Libev_Client is not set
           # CONFIG_PACKAGE_luci-app-passwall_INCLUDE_ShadowsocksR_Libev_Server is not set
           # CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Simple_Obfs is not set
-          # CONFIG_PACKAGE_luci-app-passwall_INCLUDE_SingBox is not set
+          CONFIG_PACKAGE_luci-app-passwall_INCLUDE_SingBox=y
           # CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Trojan_Plus is not set
           # CONFIG_PACKAGE_luci-app-passwall_INCLUDE_V2ray_Geodata is not set
           # CONFIG_PACKAGE_luci-app-passwall_INCLUDE_V2ray_Plugin is not set
-          CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Xray=y
+          CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Xray is not set
           CONFIG_PACKAGE_luci-app-qbittorrent=y
           CONFIG_PACKAGE_luci-app-qbittorrent_static=y
           # CONFIG_PACKAGE_luci-app-qbittorrent_dynamic is not set
