--- a/.github/workflows/officialpw.yml
+++ b/.github/workflows/officialpw.yml
@@ -46,7 +46,7 @@ jobs:
 
       - name: 克隆源码
         run: |
-          git clone -b openwrt-23.05 --single-branch https://github.com/openwrt/openwrt
+          git clone -b openwrt-23.05 --single-branch https://github.com/immortalwrt/immortalwrt openwrt
           mv ./openwrt/* ./
 
       - name: 更新feeds源
@@ -58,18 +58,41 @@ jobs:
           rm -rf feeds/packages/lang/golang
           git clone https://github.com/sbwml/packages_lang_golang -b 22.x feeds/packages/lang/golang
 
+      - name: 删除部分luci文件
+        run: |
+          pushd feeds/luci/applications
+          rm -rf luci-app-passwall
+          rm -rf luci-app-qbittorrent
+
       - name: 删除部分packages文件
         run: |
           pushd feeds/packages/net
           rm -rf adguardhome
+          rm -rf brook
+          rm -rf chinadns-ng
+          rm -rf dns2socks
+          rm -rf dns2tcp
           rm -rf dnsproxy
+          rm -rf hysteria
+          rm -rf ipt2socks
           rm -rf microsocks
-          rm -rf sing-box
+          rm -rf naiveproxy
+          rm -rf pdnsd-alt
+          rm -rf shadowsocks-rust
+          rm -rf shadowsocksr-libev
+          rm -rf simple-obfs
           rm -rf smartdns
+          rm -rf ssocks
+          rm -rf tcping
+          rm -rf trojan
           rm -rf trojan-go
+          rm -rf trojan-plus
+          rm -rf tuic-client
           rm -rf v2ray-core
           rm -rf v2ray-geodata
+          rm -rf v2ray-plugin
           rm -rf xray-core
+          rm -rf xray-plugin
 
       - name: 安装feeds源
         run: |
@@ -127,8 +150,19 @@ jobs:
           # DNSMASQ-FULL支持:
           # CONFIG_PACKAGE_dnsmasq is not set
           CONFIG_PACKAGE_dnsmasq-full=y
+          CONFIG_PACKAGE_dnsmasq_full_ipset=y
+          # CONFIG_PACKAGE_ipv6helper is not set
+          CONFIG_PACKAGE_ip6tables-nft=y
+          CONFIG_PACKAGE_iptables-mod-conntrack-extra=y
+          CONFIG_PACKAGE_iptables-mod-iprange=y
+          CONFIG_PACKAGE_iptables-mod-nat-extra=y
+          CONFIG_PACKAGE_iptables-mod-socket=y
+          CONFIG_PACKAGE_iptables-mod-tproxy=y
+          CONFIG_PACKAGE_iptables-nft=y
+          CONFIG_PACKAGE_xtables-nft=y
 
           # 文件系统支持:
+          CONFIG_PACKAGE_autosamba=y
           CONFIG_PACKAGE_block-mount=y
           CONFIG_PACKAGE_kmod-fs-exfat=y
           CONFIG_PACKAGE_kmod-fs-ext4=y
@@ -153,6 +187,7 @@ jobs:
           CONFIG_LUCI_LANG_zh_Hans=y
 
           # 常用LuCI插件选择:
+          # CONFIG_PACKAGE_luci-app-cpufreq is not set
           CONFIG_PACKAGE_luci-app-firewall=y
           CONFIG_PACKAGE_luci-app-opkg=y
           CONFIG_PACKAGE_luci-app-passwall=y
@@ -171,7 +206,6 @@ jobs:
           CONFIG_PACKAGE_luci-app-qbittorrent=y
           CONFIG_PACKAGE_luci-app-qbittorrent_static=y
           # CONFIG_PACKAGE_luci-app-qbittorrent_dynamic is not set
-          CONFIG_PACKAGE_luci-app-samba4=y
           CONFIG_PACKAGE_luci-app-ttyd=y
 
           # 常用软件包:
