--- a/.github/workflows/officialpw.yml
+++ b/.github/workflows/officialpw.yml
@@ -94,6 +94,10 @@ jobs:
           rm -rf xray-core
           rm -rf xray-plugin
 
+      - name: 删除部分package文件
+          pushd package/network/config/firewall4
+          rm -rf patches
+
       - name: 安装feeds源
         run: |
           ./scripts/feeds install -a
