--- a/.github/workflows/officialpw.yml
+++ b/.github/workflows/officialpw.yml
@@ -96,8 +96,9 @@ jobs:
 
       - name: 删除部分patch文件
         run: |
-          pushd package/network/config/firewall4/patches
-          rm -rf 001-firewall4-add-support-for-fullcone-nat.patch
+          sed -i '29s/1/0/g' package/network/config/firewall4/patches/001-firewall4-add-support-for-fullcone-nat.patch
+          sed -i '30s/1/0/g' package/network/config/firewall4/patches/001-firewall4-add-support-for-fullcone-nat.patch
+          sed -i '31s/1/0/g' package/network/config/firewall4/patches/001-firewall4-add-support-for-fullcone-nat.patch
 
       - name: 安装feeds源
         run: |
@@ -155,14 +156,6 @@ jobs:
           # CONFIG_PACKAGE_ipv6helper is not set
           CONFIG_PACKAGE_odhcp6c=y
           CONFIG_PACKAGE_odhcpd-ipv6only=y
-          CONFIG_PACKAGE_ip6tables-nft=y
-          CONFIG_PACKAGE_iptables-mod-conntrack-extra=y
-          CONFIG_PACKAGE_iptables-mod-iprange=y
-          CONFIG_PACKAGE_iptables-mod-nat-extra=y
-          CONFIG_PACKAGE_iptables-mod-socket=y
-          CONFIG_PACKAGE_iptables-mod-tproxy=y
-          CONFIG_PACKAGE_iptables-nft=y
-          CONFIG_PACKAGE_xtables-nft=y
 
           # 文件系统支持:
           CONFIG_PACKAGE_autosamba=y
