--- a/.github/workflows/officialpw.yml
+++ b/.github/workflows/officialpw.yml
@@ -65,6 +65,11 @@ jobs:
           rm -rf feeds/packages/lang/golang
           git clone https://github.com/sbwml/packages_lang_golang -b 22.x feeds/packages/lang/golang
 
+      - name: 调整插件位置
+        run: |
+          sed -i '2s/nas/services/g' feeds/luci/applications/luci-app-samba4/root/usr/share/luci/menu.d/luci-app-samba4.json
+          sed -i 's/system/services/g' feeds/luci/applications/luci-app-ttyd/root/usr/share/luci/menu.d/luci-app-ttyd.json
+
       - name: 删除部分luci文件
         run: |
           pushd feeds/luci/applications
