--- a/.github/workflows/officialpw.yml
+++ b/.github/workflows/officialpw.yml
@@ -49,7 +49,7 @@ jobs:
           git clone -b openwrt-23.05 --single-branch https://github.com/immortalwrt/immortalwrt openwrt
           mv ./openwrt/* ./
 
-      - name: 删除部分patch文件
+      - name: 修改部分patch文件
         run: |
           sed -i '14,16d' package/emortal/default-settings/files/99-default-settings
           sed -i '29s/1/0/g' package/network/config/firewall4/patches/001-firewall4-add-support-for-fullcone-nat.patch
