--- a/.github/workflows/officialpw.yml
+++ b/.github/workflows/officialpw.yml
@@ -46,7 +46,7 @@ jobs:
 
       - name: 克隆源码
         run: |
-          git clone -b main --single-branch https://github.com/openwrt/openwrt
+          git clone -b master --single-branch https://github.com/immortalwrt/immortalwrt openwrt
           mv ./openwrt/* ./
 
       - name: 修改部分patch文件
@@ -180,7 +180,6 @@ jobs:
           CONFIG_PACKAGE_kmod-usb3=y
 
           # 系统中文支持:
-          CONFIG_PACKAGE_default-settings=y
           CONFIG_PACKAGE_default-settings-chn=y
 
           # 常用LuCI插件选择:
