--- a/.github/workflows/officialpw.yml
+++ b/.github/workflows/officialpw.yml
@@ -93,6 +93,7 @@ jobs:
           rm -rf shadowsocks-rust
           rm -rf shadowsocksr-libev
           rm -rf simple-obfs
+          rm -rf sing-box
           rm -rf smartdns
           rm -rf ssocks
           rm -rf tcping
