--- a/.github/workflows/officialpw.yml
+++ b/.github/workflows/officialpw.yml
@@ -168,7 +168,7 @@ jobs:
 
           # 文件系统支持:
           # CONFIG_USE_APK is not set
-          # CONFIG_PACKAGE_opkg is not set
+          CONFIG_PACKAGE_opkg=y
           CONFIG_PACKAGE_block-mount=y
           CONFIG_PACKAGE_kmod-fs-exfat=y
           CONFIG_PACKAGE_kmod-fs-ext4=y
